1.6.6
-Enhance Email Address checking

1.6.5
-Fixed some bugs
-Support cert.keyTypeGetOID
-Support hashTypeFromOID
-Added geometry.Point.calBoundaryPoint
-Added web.getInputOrSelectElement, getInputElement and getSelectElement

1.6.4
-Support geometry.Polyline
-Fixed geometry.Polygon.insideOrTouch
-Fixed geometry.MultiGeometry.insideOrTouch
-leaflet.createFromKML support group in group
-parser.parseKMLContainer hide Schema message
-Added data.Timestamp.toDate()
-Added data.Weekday enum
-Added data.DateTimeUtil.ticks2Weekday()
-Added data.LocalDate.getWeekday()
-Added data.StringMap and data.NumberMap interface type
-Fixed math.GeoJSON.parseGeometry

1.6.3
-Added hash.MD5
-Support web.Dialog in frameset
-Added data.objectParseTS
-web.propertiesToHTML support nameMap and timeFormat
-text.isHKID fixed wrong validation

1.6.2
-Fixed data.DateTimeUtil.totalDays2DateValue bigint problem

1.6.1
-Fixed parser: parseJpg and parseWebp problem
-Modified data.Timestamp.fromStr to return null if error
-Added data.LocalDate.fromStr
-Added data.LocalDate.today
-Added text.toUTF32Length
-Added text.isUInteger
-Added text.isEmailAddress, isHKID
-Added text.charIsAlphaNumeric, text.charIsDigit, text.charIsUpperCase, text.charIsLowerCase

1.6.0
-Added data.ByteReader.readInt24/readUInt24
-Added data.ByteReader.readUTF16
-Added data.ByteReader.isASCIIText
-Added data.ByteReader.getU8Arr
-Added data.ParsedObject
-Added data.rol32, ror32, shl32, shr32, sar32
-Added data.arrayBufferEquals
-Change data.Duration, data.Timestamp, data.TimeInstant to bigint
-Added cert.js
-Added certutil.js
-Added hash.SHA1
-Added net.getIPv4Name
-Added text.splitLines
-Added unit.Count.wellFormat, unit.Count.wellFormatBin
-Added web.getCacheSize

1.5.5
-Fixed web.Dialog in iframe
-Fixed GeolocationFilter when using minDistMeter
-Added data.ByteReader
-Added media.StaticImage
-Added media.EXIFData
-Added media.loadImageFromBlob
-Added text.u8Arr2Hex
-Added web.propertiesToHTML
-Support parsing JPG file