@@ -44,6 +44,7 @@ Math::CoordinateSystemManager::DatumInfo Math::CoordinateSystemManager::datumSRI
 //	{srid, spheroid,"name", x0, y0, z0, cX, cY, cZ, xAngle, yAngle, zAngle, scale},
 	{1025,  7050,  UTF8STRC("Taiwan_Datum_1967"), 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, Math::Unit::Angle::AU_RADIAN},
 	{1026,  7019,  UTF8STRC("Taiwan_Datum_1997"), 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, Math::Unit::Angle::AU_RADIAN},
+	{1207,  7022,  UTF8STRC("Macao_1920"), -2361554.788, 5417536.177, 2391608.926, -202.865, -303.990, -155.873, -34.079, 76.126, 32.660, 6.096, Math::Unit::Angle::AU_ARCSECOND},
 	{6236,  7022,  UTF8STRC("Hu_Tzu_Shan_1950"), 0, 0, 0, -637, -549, -203, 0, 0, 0, 0, Math::Unit::Angle::AU_RADIAN},
 	{6326,  7030,  UTF8STRC("WGS_1984"), 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, Math::Unit::Angle::AU_RADIAN},
 	{6600,  7012,  UTF8STRC("Anguilla_1957"), 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, Math::Unit::Angle::AU_RADIAN},
@@ -64,6 +65,7 @@ Math::CoordinateSystemManager::GeogcsSRInfo Math::CoordinateSystemManager::geogc
 	{4602,  6602,  UTF8STRC("Dominica 1945"), Math::CoordinateSystem::PT_GREENWICH, Math::CoordinateSystem::UT_DEGREE, 0.0174532925199433, true},
 	{4603,  6603,  UTF8STRC("Grenada 1953"), Math::CoordinateSystem::PT_GREENWICH, Math::CoordinateSystem::UT_DEGREE, 0.0174532925199433, true},
 	{4611,  6611,  UTF8STRC("Hong Kong 1980"), Math::CoordinateSystem::PT_GREENWICH, Math::CoordinateSystem::UT_DEGREE, 0.0174532925199433, true},
+	{8428,  1207,  UTF8STRC("Macau_2009"), Math::CoordinateSystem::PT_GREENWICH, Math::CoordinateSystem::UT_DEGREE, 0.0174532925199433, true},
 };
 
 Math::CoordinateSystemManager::ProjcsSRInfo Math::CoordinateSystemManager::projcsSRID[] = {
@@ -78,6 +80,7 @@ Math::CoordinateSystemManager::ProjcsSRInfo Math::CoordinateSystemManager::projc
 	{3827,   3821, Math::CoordinateSystem::CoordinateSystemType::MercatorProjected, UTF8STRC("TWD67 / TM2 zone 119"), 250000.00, 0.00, 121.0, 0, 0.9999, Math::CoordinateSystem::UT_METRE},
 	{3828,   3821, Math::CoordinateSystem::CoordinateSystemType::MercatorProjected, UTF8STRC("TWD67 / TM2 zone 121"), 250000.00, 0.00, 121.0, 0, 0.9999, Math::CoordinateSystem::UT_METRE},
 	{3857,   4326, Math::CoordinateSystem::CoordinateSystemType::Mercator1SPProjected, UTF8STRC("WGS 84 / Pseudo-Mercator"), 0, 0, 0, 0, 1, Math::CoordinateSystem::UT_METRE},
+	{8432,   8428, Math::CoordinateSystem::CoordinateSystemType::MercatorProjected, UTF8STRC("Macau Grid"), 20000.00, 20000.00, 113.53646944444444444444444444444, 22.21239722222222222222222222222222, 1, Math::CoordinateSystem::UT_METRE},
 	{102100, 4326, Math::CoordinateSystem::CoordinateSystemType::Mercator1SPProjected, UTF8STRC("WGS 84 / Pseudo-Mercator"), 0, 0, 0, 0, 1, Math::CoordinateSystem::UT_METRE},
 	{102140, 4611, Math::CoordinateSystem::CoordinateSystemType::MercatorProjected, UTF8STRC("Hong Kong 1980 Grid System"), 836694.05, 819069.80, 114.17855555555555555555555555556, 22.312133333333333333333333333333, 1, Math::CoordinateSystem::UT_METRE},
 	{900913, 4326, Math::CoordinateSystem::CoordinateSystemType::Mercator1SPProjected, UTF8STRC("Google_Maps_Global_Mercator"), 0, 0, 0, 0, 1, Math::CoordinateSystem::UT_METRE},
@@ -118,6 +121,8 @@ Math::CoordinateSystemManager::SpatialRefInfo Math::CoordinateSystemManager::srI
 	{7022,   SRT_SPHERO, OT_EPSG,  "International 1924"},
 	{7030,   SRT_SPHERO, OT_EPSG,  "WGS 84"},
 	{7050,   SRT_SPHERO, OT_EPSG,  "GRS 1967 Modified"},
+	{8428,   SRT_GEOGCS, OT_EPSG,  "Macau_2009"},
+	{8432,   SRT_PROJCS, OT_EPSG,  "Macau Grid", 113.52, 22.06, 113.68, 22.23},
 	{8901,   SRT_PRIMEM, OT_EPSG,  "Greenwich"},
 	{9001,   SRT_UNIT,   OT_EPSG,  "metre"},
 	{9122,   SRT_UNIT,   OT_EPSG,  "degree"},
@@ -138,7 +143,7 @@ Math::CoordinateSystemManager::DatumInfo Math::CoordinateSystemManager::datumLis
 	{0,     0,     UTF8STRC("HONGKONG"), 0, 0, 0, -162.619, -276.959, -161.764, 0.067753 / 0.999998905754, -2.243648 / 0.999998905754, -1.158828 / 0.999998905754, -1.094246, Math::Unit::Angle::AU_ARCSECOND},
 	{6611,  7022,  UTF8STRC("Hong_Kong_1980"), 0, 0, 0, -162.619, -276.959, -161.764, 0.067753 / 0.999998905754, -2.243648 / 0.999998905754, -1.158828 / 0.999998905754, -1.094246, Math::Unit::Angle::AU_ARCSECOND},
 	{6236,  7022,  UTF8STRC("Hu_Tzu_Shan_1950"), 637, -549, -203, 0, 0, 0, 0, Math::Unit::Angle::AU_ARCSECOND},
-	{0,     0,     UTF8STRC("Macau_2009"), -2361554.788, 5417536.177, 2391608.926, -202.865, -303.990, -155.873, -34.079, 76.126, 32.660, 6.096, Math::Unit::Angle::AU_ARCSECOND},
+	{1207,  7022,  UTF8STRC("Macau_2009"), -2361554.788, 5417536.177, 2391608.926, -202.865, -303.990, -155.873, -34.079, 76.126, 32.660, 6.096, Math::Unit::Angle::AU_ARCSECOND},
 	{0,     0,     UTF8STRC("Montserrat_1958"), 0, 0, 0, 174, 159, 365, 0, 0, 0, 0, Math::Unit::Angle::AU_ARCSECOND},
 	{0,     0,     UTF8STRC("St_Kitts_1955"), 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, Math::Unit::Angle::AU_RADIAN},
 	{0,     0,     UTF8STRC("St_Lucia_1955"), 0, 0, 0, -149, 128, 296, 0, 0, 0, 0, Math::Unit::Angle::AU_ARCSECOND},
@@ -161,7 +166,7 @@ Math::CoordinateSystemManager::GeographicCSysInfo Math::CoordinateSystemManager:
 	{4739, UTF8STRC("HONGKONG"), "D_HONGKONG", Math::EarthEllipsoid::EET_INTL1924},
 	{4611, UTF8STRC("Hong Kong 1980"), "Hong_Kong_1980", Math::EarthEllipsoid::EET_INTL1924},
 	{4236, UTF8STRC("Hu Tzu Shan 1950"), "Hu_Tzu_Shan_1950", Math::EarthEllipsoid::EET_INTL1924},
-	{0,    UTF8STRC("Macau_2009"), "D_Macau_2009", Math::EarthEllipsoid::EET_INTL1924},
+	{8428, UTF8STRC("Macau_2009"), "Macau_2009", Math::EarthEllipsoid::EET_INTL1924},
 	{4604, UTF8STRC("Montserrat 1958"), "Montserrat_1958", Math::EarthEllipsoid::EET_CLARKE1880R},
 	{4605, UTF8STRC("St. Kitts 1955"), "St_Kitts_1955", Math::EarthEllipsoid::EET_CLARKE1880R},
 	{4606, UTF8STRC("St. Lucia 1955"), "St_Lucia_1955", Math::EarthEllipsoid::EET_CLARKE1880R},
