@@ -1,5 +1,6 @@
 1.6.6
 -Enhance Email Address checking
+-Added Macau 2009 Grid
 
 1.6.5
 -Fixed some bugs
